examples/i18n/contents/error/403/de.php
<p>
Sie sind nicht berechtigt, diese Seite anzuzeigen!
</p>
